# LangChain-api-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
notebook/: LangChain_1.0.md
src/LangChain/: 01test.py  02stream.py  03C-model.py  04embedding.py  05prompt.py  06few-prompt.py  07chat-prompt.py  08chain.py  10StrOutputParser.py  11JsonOutputParser.py  12RunnableLambda.py  13temporary_memory.py  14longTermMemory.py  15CSVLoader.py  16JSONLoader.py  17TextLoader.py  18PyPDFLoader.py  19in-memory_vector_stores.py  20external_vector_stores.py  21RunnablePassthrough.py
src/LangChain/data/: dately.txt  info.csv  user.csv  user.json  user_json_lines.json  weather.json
src/item/MyRAG/data/: diversity_test.txt  hybrid_test.txt  keyword_test.txt  rerank_test.txt  semantic_test.txt
src/myagent/: 01test.py  02test.py  03test.py  04json.py  05test.py
